[tool.poetry]
name = "whatsapp"
version = "0.1.0"
description = "Mensage automation for WhatsApp"
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
